# smart-account-sample

./: .gitignore  Beaker.toml  Cargo.toml  README.md
contracts/base/: Cargo.toml
contracts/base/src/: contract.rs  msg.rs
contracts/recovery/: Cargo.toml
contracts/recovery/src/: contract.rs  msg.rs  state.rs
contracts/spend-limit/: Cargo.toml
contracts/spend-limit/src/: contract.rs  msg.rs  state.rs
test/: .env  .npmrc  activate.js  index.js  mnemonic.js  nft.js  package-lock.json  package.json  send.js
