[workspace]
members = ["packages/*","contracts/*"]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/aura-nw/smart-account-sample"
homepage      = "https://aura.network/"
documentation = "https://docs.aura.network/"
rust-version  = "1.65"

[workspace.dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std    = "1.2.1"
cw2             = "1.0.1"
cw20            = "1.0.1"
cw-multi-test   = "0.16.2"
cw-ownable      = "0.5.0"
cw-storage-plus = "1.0.1"
cw-utils        = "1.0.1"
schemars        = "0.8.11"
serde           = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror       = "1.0.38"
serde-json-wasm = "0.5.0"
smart-account           = { version = "0.1.0", path = "./packages/smart-account" }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
